product page black spacing issue fixed.

--- a/src/pages/product/[id]/[rarity]/[isAuction]/styles.module.scss
+++ b/src/pages/product/[id]/[rarity]/[isAuction]/styles.module.scss
@@ -106,6 +106,7 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
+            flex-grow: 1;
 
             .bespokeBtn {
               background: rgba(63, 159, 248, 0.51);
